--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -17,7 +17,12 @@ img {
 }
 
 .modal-content {
-    background-color: grey;
+    background-color: lightslategrey;
+    /* background-color: rgba(0,0,0,0.4); */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
     margin-top: 1%;
     margin-left: 1%;
     margin-bottom: 1%;
@@ -36,7 +41,7 @@ img {
 
 .close:hover,
 .close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
