fixed routes so that a button to scrape articles couuld be used

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -32,6 +32,11 @@ img {
     width: 99%;
 }
 
+.modal-body {
+    height: auto;
+    overflow-y: auto;
+}
+
 .close {
     color: #aaa;
     float: right;
